--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -18,6 +20,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "@tanstack/react-query": "^4.29.7",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -27,13 +30,13 @@
     "react-native-date-picker": "^4.2.13",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "yup": "^1.1.1",
     "expo-secure-store": "~12.1.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/datetimepicker": "6.7.3"
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
