--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
-    "name": "arthemis-mobile",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web"
-    },
-    "dependencies": {
-        "@hookform/resolvers": "^3.1.0",
-        "@react-navigation/bottom-tabs": "^6.5.7",
-        "@react-navigation/native": "^6.1.6",
-        "@react-navigation/native-stack": "^6.9.12",
-        "@react-navigation/stack": "^6.3.16",
-        "@rneui/base": "^4.0.0-rc.7",
-        "@rneui/themed": "^4.0.0-rc.7",
-        "@tanstack/react-query": "^4.29.7",
-        "axios": "^1.4.0",
-        "expo": "~48.0.15",
-        "expo-font": "~11.1.1",
-        "expo-status-bar": "~1.4.4",
-        "react": "18.2.0",
-        "react-hook-form": "^7.43.9",
-        "react-native": "0.71.8",
-        "react-native-dotenv": "^3.4.8",
-        "react-native-gesture-handler": "~2.9.0",
-        "react-native-safe-area-context": "4.5.0",
-        "react-native-screens": "~3.20.0",
-        "react-native-vector-icons": "^9.2.0",
-        "react-redux": "^8.0.5",
-        "redux": "^4.2.1",
-        "redux-thunk": "^2.4.2",
-        "yup": "^1.1.1",
-        "expo-secure-store": "~12.1.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0"
-    },
-    "private": true
+  "name": "arthemis-mobile",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "@tanstack/react-query": "^4.29.7",
+    "axios": "^1.4.0",
+    "expo": "~48.0.15",
+    "expo-font": "~11.1.1",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "yup": "^1.1.1",
+    "expo-secure-store": "~12.1.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
