--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
-    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/checkbox": "^0.5.15",
+    "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
