--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-picker/picker": "2.4.8",
@@ -24,7 +25,9 @@
     "dayjs": "^1.11.7",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.8",
@@ -35,9 +38,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "yup": "^1.1.1",
-    "expo-secure-store": "~12.1.1",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
